objects/WorkFeedback.object
<CustomObject>
    <fields>
        <fullName>FeedBackLastConvertDate__c</fullName>
        <inlineHelpText>Last time this feedback was converted to string/int</inlineHelpText>
        <label>Feedback Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>needConverting__c</fullName>
        <description>Doing this way because soql don&apos;t allow you do to LastModifiedDate &gt; FeedBackLastConvertDate__c in where clause
1 = 1day, 0.5 = 12hr
if $Setup.WorkCustomObject__c.FeedbackBufferSec__c is blank, then 15 seconds is set</description>
        <formula>ISNULL(FeedBackLastConvertDate__c) || 
(LastModifiedDate - FeedBackLastConvertDate__c) &gt; ( 1.0/(24*60*60)*BLANKVALUE($Setup.WorkCustomObject__c.FeedbackBufferSec__c,15) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check if there was modification to feedback after last convert, within WorkCustomObject__c.FeedbackBufferSec__c seconds</inlineHelpText>
        <label>Need Converting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numericValue__c</fullName>
        <inlineHelpText>number value of the text</inlineHelpText>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stringValue__c</fullName>
        <inlineHelpText>String value of the feedback</inlineHelpText>
        <label>String Value</label>
        <type>TextArea</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>